--- a/AuTO/CreateTournamentControl.resx
+++ b/AuTO/CreateTournamentControl.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="hintLabel.Text" xml:space="preserve">
+    <value>* denotes required field
+-To add players without press "Add", press Shift + Enter
+-To shift seedings, select the player, hold Shift + Up to move the player up a seed 
+or hold Shift + Down to move the player down a seed.</value>
+  </data>
   <metadata name="listboxMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
